--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
+# CMakeList.txt : Top-level CMake project file, do global configuration
 # and include sub-projects here.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.10)
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
@@ -9,7 +9,15 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project ("SAOD_Lab8")
+project ("SAOD_Lab8" LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 23)
+file(GLOB CXX_FILES "src/*.cc")
 
-# Include sub-projects.
-add_subdirectory ("SAOD_Lab8")
+if (WIN32)
+	add_definitions("/W4 /WX") 
+	add_compile_options(-D _CRT_SECURE_NO_WARNINGS) 
+else()
+	add_definitions("-Wall -Wextra -Werror -Wconversion -Wsign-conversion")
+endif(WIN32)
+
+add_executable (${PROJECT_NAME} ${CXX_FILES}) 
